--- a/app/src/main/res/layout/item_circle.xml
+++ b/app/src/main/res/layout/item_circle.xml
@@ -24,15 +24,34 @@
             app:civ_border_color="#FF000000"
             app:civ_border_width="2dp" />
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
             android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"
-            android:text="Circle Name"
-            android:textSize="18sp"/>
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="Circle Name"
+                android:textSize="18sp"/>
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+
+                android:layout_below="@+id/content"
+                android:text="Circle Description"
+                android:textSize="12sp"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 
 
