--- a/app/src/main/res/menu/menu_circle_detail.xml
+++ b/app/src/main/res/menu/menu_circle_detail.xml
@@ -1,4 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/action_add_circle"
+        android:title="@string/action_add_circle"
+        android:icon="@drawable/ic_add_white_24dp"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_leave_circle"
+        android:title="@string/action_leave_circle"
+        android:icon="@drawable/ic_remove_white_24dp"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_cancel_circle_request"
+        android:title="@string/action_cancel_circle_request"
+        android:icon="@drawable/ic_close_white_24dp"
+        app:showAsAction="always" />
 
 </menu>
