--- a/app/src/main/res/layout/fragment_circle_detail.xml
+++ b/app/src/main/res/layout/fragment_circle_detail.xml
@@ -82,6 +82,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginEnd="16dp"
         android:layout_gravity="bottom|end"
+        android:src="@drawable/ic_create_white_24dp"
         app:borderWidth="0dp"
         app:fabSize="normal"/>
 
