--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,6 +15,7 @@
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:tabMaxWidth="0dp"
             app:tabGravity="fill"
             app:tabMode="fixed"
             style="@style/HokieFinderTabLayout"/>
