--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -73,6 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
+            app:tabMaxWidth="0dp"
             app:tabGravity="fill"
             app:tabMode="fixed"
             style="@style/HokieFinderTabLayout" />
