--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -4,9 +4,9 @@
         <item android:id="@+id/drawer_profile"
             android:title="@string/drawer_profile"
             android:icon="@drawable/ic_person_black_48dp" />
-        <item android:id="@+id/drawer_friends"
-            android:title="@string/drawer_friends"
-            android:icon="@drawable/ic_people_black_48dp" />
+        <item android:id="@+id/drawer_invites"
+            android:title="@string/drawer_invites"
+            android:icon="@drawable/ic_email_black_48dp" />
         <item android:id="@+id/drawer_settings"
             android:title="@string/drawer_settings"
             android:icon="@drawable/ic_settings_black_48dp" />
